--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property="og:url" content="https://jiyxxn.github.io/justone/index.html">
+  <meta property="og:title" content="JUSTONE 저스트원">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="./images/main_logo_2.png">
+  <meta property="og:description" content="김지윤 포트폴리오">
+
   <title>JUSTONE 저스트원</title>
   <link rel="stylesheet" href="./css/justone.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
