--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta property="og:url" content="https://jiyxxn.github.io/justone/index.html">
+  <meta property="og:url" content="https://jiyxxn.github.io/justone/">
   <meta property="og:title" content="JUSTONE 저스트원">
   <meta property="og:type" content="website">
   <meta property="og:image" content="./images/main_logo_2.png">
