--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:url" content="https://jiyxxn.github.io/justone/">
   <meta property="og:title" content="JUSTONE 저스트원">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./images/main_logo_2.png">
+  <meta property="og:image" content="https://jiyxxn.github.io/justone/images/main_logo_2">
   <meta property="og:description" content="김지윤 포트폴리오">
 
   <title>JUSTONE 저스트원</title>
