--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                     <option value="Global">JAPANESE</option>
                 </select>
 
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/" target="_blank">
                   <img src="./images/ins_icon_01.jpg" alt="instagram_icon">
                 </a>
 
-                <a href="https://appleid.apple.com/">
+                <a href="https://appleid.apple.com/" target="_blank">
                   <img src="./images/ins_icon_02.jpg" alt="apple_icon">
                 </a>
 
-                <a href="https://play.google.com/">
+                <a href="https://play.google.com/" target="_blank">
                 <img src="./images/ins_icon_03.jpg" alt="play-store_icon">
                 </a>
             </div>
