--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
 
             <div class="top_left_up">
                 <select name="language" id="language">
-                    <option value="Global" selected>KOREAN</option>
-                    <option value="Global">ENGLISH</option>
-                    <option value="Global">CHINESE</option>
-                    <option value="Global">JAPANESE</option>
+                    <option value="KOR" selected>KOREAN</option>
+                    <option value="ENG">ENGLISH</option>
+                    <option value="CHI">CHINESE</option>
+                    <option value="JAP">JAPANESE</option>
                 </select>
 
-                <a href="https://www.instagram.com/" target="_blank">
+                <a href="https://www.instagram.com/">
                   <img src="./images/ins_icon_01.jpg" alt="instagram_icon">
                 </a>
 
-                <a href="https://appleid.apple.com/" target="_blank">
+                <a href="https://appleid.apple.com/">
                   <img src="./images/ins_icon_02.jpg" alt="apple_icon">
                 </a>
 
-                <a href="https://play.google.com/" target="_blank">
+                <a href="https://play.google.com/">
                 <img src="./images/ins_icon_03.jpg" alt="play-store_icon">
                 </a>
             </div>
@@ -1536,5 +1536,73 @@
     </div>
 
 </div>
+
+
+<!-- 모바일 화면 시작 -->
+
+<div class="mob_all">
+
+  <header>
+
+    <div class="m_top_row_1">
+      <select name="language" id="language">
+        <option value="KOR" selected>KOREAN</option>
+        <option value="ENG">ENGLISH</option>
+        <option value="CHI">CHINESE</option>
+        <option value="JAP">JAPANESE</option>
+      </select>
+
+      <div class="m_icon_box">
+        <a href="#">
+          <img src="./images/ins_icon_03.jpg" alt="play-store_icon" width="23">
+        </a>
+        <a href="#">
+          <img src="./images/ins_icon_02.jpg" alt="apple_icon" width="25">
+        </a>
+        <a href="#">
+          <img src="./images/ins_icon_01.jpg" alt="instagram_icon" width="25">
+        </a>
+      </div>
+    </div> <!--m_top_row_1 닫기-->
+
+    <div id="m_logo">
+      <a href="#">
+        <img src="./images/main_logo_2.png" alt="mob_logo" width=380>
+      </a>
+    </div>
+
+    <ul class="m_menu_bar_1">
+      <a href="#"><li>회원가입</li></a>
+      <a href="#"><li>로그인</li></a>
+      <a href="#"><li>장바구니</li></a>
+      <a href="#"><li>마이페이지</li></a>
+    </ul>
+
+    <ul class="m_menu_bar_2">
+      <a href="#"><li>MADE.J</li></a>
+      <a href="#"><li>TOP</li></a>
+      <a href="#"><li>OPS/SKIRT</li></a>
+      <a href="#"><li>BEST재입고</li></a>
+      <a href="#"><li>OUTER</li></a>
+      <a href="#"><li>KNIT/CARDIGAN</li></a>
+      <a href="#"><li>1+1</li></a>
+      <a href="#"><li>PANTS</li></a>
+      <a href="#"><li>+PLUS SIZE</li></a>
+    </ul>
+  </header>
+
+  <div class="m_main_img">
+    <img src="./images/m_main_img.png" alt="mob_main" width="450">
+  </div>
+
+
+
+
+
+
+</div> <!--.mob_all div 닫기 -->
+
+
+
 </body>
 </html>
