--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- 메인 이미지 -->
     <div class="main_img">
-      <img src="./images/main_img_2.png" alt="main_img">
+      <img src="./images/main_img.png" alt="main_img">
     </div>
 
     <!-- New, Best, Basic, 1+1 -->
@@ -641,6 +641,13 @@
       </div>
     </div>
 
+    <!-- 메인 이미지2 -->
+    <div class="main_img_2">
+      <img src="./images/main_img_2.png" alt="main_img_row">
+    </div>
+
+
+    <h1 id="row_title_2">NEW 10%</h1>
     <!-- 상품 6번째 줄 시작 -->
     <div class="section_row_2">
                        
@@ -1595,12 +1602,284 @@
     <img src="./images/m_main_img.png" alt="mob_main" width="450">
   </div>
 
+  <h1 class="m_title">WEEKLY BEST</h1>
+
+  <div class="m_product_box">
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_02.gif" alt="product_img_02" width="190">
+      </a>
+
+      <div class="color_row">
+        <img src="./images/product_color_fdfff0.png" alt="ivory">
+        <img src="./images/product_color_fca635.png" alt="orange">
+        <img src="./images/product_color_062266.png" alt="black">
+      </div>
+
+      <a href="#">
+        <span class="product_name">
+          뉴블리 라인다트 스판 7부셔츠
+        </span>
+      </a>
+
+      <div class="size_text">
+        <span>FREE</span>
+      </div>
+
+      <div class="price_row">
+        <span class="price_text">29,800원</span>
+      </div>
+      <span>리뷰 : 37개</span>
+    </div>
+
+    <div class="m_product_row">
+      <div class="m_row_image">
+        <img src="./images/product_img_01.gif" alt="뉴봄 프릴넥 나그랑 블라우스" width="190">
+      </div>
+      <ul class="color_row">
+        <img src="./images/product_color_fdfff0.png" alt="ivory">
+        <img src="./images/product_color_f9f345.png" alt="yellow">
+        <img src="./images/product_color_e89ebf.png" alt="pink">
+      </ul>
+      <a href="#">
+        <span class="product_name">
+          뉴봄 프릴넥 나그랑 블라우스
+        </span>
+      </a>
+      <div class="size_text">
+        <span>FREE</span>
+      </div>
+      <div class="price_row">
+        <span><del>28,600원</del></span>
+        <span class="price_text">24,310원</span>
+        <p class="discount_text">15%</p>
+      </div>
+      <span>리뷰 : 325개</span>
+    </div>
+  </div>
+
+
+  <div class="m_product_box">
+
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_03.gif" alt="product_img_03" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_fdfff0.png" alt="ivory">
+        <img src="./images/product_color_e89ebf.png" alt="babypink">
+        <img src="./images/product_color_84b4ce.png" alt="skyblue">
+        <img src="./images/product_color_873c04.png" alt="redbrown">
+        <img src="./images/product_color_1d1d1d.png" alt="black">
+      </div>
+      <a href="#">
+        <span class="product_name">
+          더리얼 쫀쫀텐션 부츠컷슬랙스
+        </span>
+      </a>
+      <div class="size_text">
+        <span>S,M,L</span>
+      </div>
+      <div class="price_row">
+        <span class="price_text">21,900원</span>
+      </div>
+      <span>리뷰 : 1,450개</span>
+    </div>
+
+    <div class="m_product_row">
+      <a href="#">
+         <img src="./images/product_img_04.gif" alt="product_img_04" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_84b4ce.png" alt="skyblue">
+        <img src="./images/product_color_309953.png" alt="green">
+        <img src="./images/product_color_f43029.png" alt="red">
+        <img src="./images/product_color_873c04.png" alt="redbrown">
+        <img src="./images/product_color_1d1d1d.png" alt="black">
+      </div>
+      <a href="#">
+        <span class="product_name">
+          베두 린넨 단가라 카라니트
+        </span>
+      </a>
+      <div class="size_text">
+        <span>FREE</span>
+      </div>
+      <div class="price_row">
+        <span class="price_text">17,800원</span>
+      </div>
+      <span>리뷰 : 5개</span>
+    </div>
+  </div>
+  <div class="m_product_box">
+      
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_05.gif" alt="product_img_05" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_fdfff0.png" alt="ivory">
+        <img src="./images/product_color_f9f345.png" alt="yellow">
+        <img src="./images/product_color_8bccb7.png" alt="mint">
+        <img src="./images/product_color_c97fe0.png" alt="purple">
+        <img src="./images/product_color_aaaaaa.png" alt="gray">
+        <img src="./images/product_color_000000.png" alt="black">
+      </div>
+      <a href="#">
+        <span class="product_name">
+          더징 나그랑 반팔 맨투맨티
+        </span>
+      </a>
+      <div class="size_text">
+        <span>FREE</span>
+      </div>
+      <div class="price_row">
+        <span class="price_text">14,800원</span>
+      </div>
+      <span>리뷰 : 33개</span>
+    </div>
+
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_06.gif" alt="product_img_06" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_84b4ce.png" alt="skyblue">
+        <img src="./images/product_color_2849b5.png" alt="bluejean">
+      </div>
+      <a href="#">
+        <span class="product_name">
+          탄탄진 2컬러 클린 일자진
+        </span>
+      </a>
+      <div class="size_text">
+        <span>S,M,L,XL</span>
+      </div>
+      <div class="price_row">
+        <span><del>32,900원</del></span>
+        <span class="price_text">28,000원</span>
+        <p class="discount_text">15%</p>
+      </div>
+      <span>리뷰 : 200개</span>
+    </div>
+  </div>
+
+  <div class="m_product_box">
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_07.jpg" alt="product_img_07" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_fdfff0.png" alt="ivory">
+        <img src="./images/product_color_586129.png" alt="khaki">
+        <img src="./images/product_color_873c04.png" alt="redbrown">
+        <img src="./images/product_color_000000.png" alt="black">
+      </div>
+      <a href="#">
+        <span class="product_name">
+          머싱 부클 리프 조끼가디건
+        </span>
+      </a>
+      <div class="size_text">
+        <span>FREE</span>
+      </div>
+      <div class="price_row">
+        <span class="price_text">19,800원</span>
+      </div>
+      <span>리뷰 : 21개</span>
+    </div>
+
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_08.gif" alt="product_img_08" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_84b4ce.png" alt="skyblue">
+      </div>
+      <a href="#">
+        <span class="product_name">
+          동안핏 사각포켓 와이드진
+        </span>
+      </a>
+      <div class="size_text">
+        <span>S,M,L</span>
+      </div>
+      <div class="price_row">
+        <span class="price_text">35,800원</span>
+      </div>
+      <span>리뷰 : 18개</span>
+    </div>
+  </div>
+
+  <div class="m_product_box">
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_09.gif" alt="product_img_09" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_fca635.png" alt="orange">
+        <img src="./images/product_color_84b4ce.png" alt="skyblue">
+        <img src="./images/product_color_000000.png" alt="black">
+      </div>
+      <a href="#">
+        <span class="product_name">
+          퓨런 자수 단가라 반팔맨투맨
+        </span>
+      </a>
+      <div class="size_text">
+        <span>FREE</span>
+      </div>
+      <div class="price_row">
+        <span class="price_text">26,800원</span>
+      </div>
+      <span>리뷰 : 116개</span>
+    </div>
+
+    <div class="m_product_row">
+      <a href="#">
+        <img src="./images/product_img_10.gif" alt="product_img_10" width="190">
+      </a>
+      <div class="color_row">
+        <img src="./images/product_color_2849b5.png" alt="bluejean">
+
+      </div>
+      <a href="#">
+        <span class="product_name">
+          꿀스판 데일리 일자진
+        </span>
+      </a>
+      <div class="size_text">
+        <span>S,M,L,XL</span>
+      </div>
+      <div class="price_row">
+        <span><del>29,800원</del></span>
+        <span class="price_text">25,400원</span>
+        <p class="discount_text">15%</p>
+      </div>
+      <span>리뷰 : 2,263개</span>
+    </div>
+  </div>
+
+  <!-- 모바일 메인이미지 2 -->
+  <div class="m_main_img_2">
+    <img src="./images/m_main_img_2.png" alt="모바일 메인2">
+  </div>
+
+
+  <!-- NEW 10% 시작 -->
+  <h1 class="m_title">NEW 10%</h1>
+
+  
+  
 
 
 
 
 
-</div> <!--.mob_all div 닫기 -->
+
+
+
+</> <!--.mob_all div 닫기 -->
 
 
 
