--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:url" content="https://jiyxxn.github.io/justone/">
   <meta property="og:title" content="JUSTONE 저스트원">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://jiyxxn.github.io/justone/images/main_logo_2">
+  <meta property="og:image" content="./images/main_img">
   <meta property="og:description" content="김지윤 포트폴리오">
 
   <title>JUSTONE 저스트원</title>
@@ -1599,7 +1599,7 @@
   </header>
 
   <div class="m_main_img">
-    <img src="./images/m_main_img.png" alt="mob_main" width="450">
+    <img src="./images/m_main_img.png" alt="mob_main" width="340">
   </div>
 
   <h1 class="m_title">WEEKLY BEST</h1>
@@ -1607,7 +1607,7 @@
   <div class="m_product_box">
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_02.gif" alt="product_img_02" width="190">
+        <img src="./images/product_img_02.gif" alt="product_img_02" width="160">
       </a>
 
       <div class="color_row">
@@ -1634,7 +1634,7 @@
 
     <div class="m_product_row">
       <div class="m_row_image">
-        <img src="./images/product_img_01.gif" alt="뉴봄 프릴넥 나그랑 블라우스" width="190">
+        <img src="./images/product_img_01.gif" alt="뉴봄 프릴넥 나그랑 블라우스" width="160">
       </div>
       <ul class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
@@ -1663,7 +1663,7 @@
 
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_03.gif" alt="product_img_03" width="190">
+        <img src="./images/product_img_03.gif" alt="product_img_03" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
@@ -1688,7 +1688,7 @@
 
     <div class="m_product_row">
       <a href="#">
-         <img src="./images/product_img_04.gif" alt="product_img_04" width="190">
+         <img src="./images/product_img_04.gif" alt="product_img_04" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_84b4ce.png" alt="skyblue">
@@ -1715,7 +1715,7 @@
       
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_05.gif" alt="product_img_05" width="190">
+        <img src="./images/product_img_05.gif" alt="product_img_05" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
@@ -1741,7 +1741,7 @@
 
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_06.gif" alt="product_img_06" width="190">
+        <img src="./images/product_img_06.gif" alt="product_img_06" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_84b4ce.png" alt="skyblue">
@@ -1767,7 +1767,7 @@
   <div class="m_product_box">
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_07.jpg" alt="product_img_07" width="190">
+        <img src="./images/product_img_07.jpg" alt="product_img_07" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
@@ -1791,7 +1791,7 @@
 
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_08.gif" alt="product_img_08" width="190">
+        <img src="./images/product_img_08.gif" alt="product_img_08" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_84b4ce.png" alt="skyblue">
@@ -1814,7 +1814,7 @@
   <div class="m_product_box">
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_09.gif" alt="product_img_09" width="190">
+        <img src="./images/product_img_09.gif" alt="product_img_09" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_fca635.png" alt="orange">
@@ -1837,7 +1837,7 @@
 
     <div class="m_product_row">
       <a href="#">
-        <img src="./images/product_img_10.gif" alt="product_img_10" width="190">
+        <img src="./images/product_img_10.gif" alt="product_img_10" width="160">
       </a>
       <div class="color_row">
         <img src="./images/product_color_2849b5.png" alt="bluejean">
@@ -1862,7 +1862,7 @@
 
   <!-- 모바일 메인이미지 2 -->
   <div class="m_main_img_2">
-    <img src="./images/m_main_img_2.png" alt="모바일 메인2">
+    <img src="./images/m_main_img_2.png" alt="모바일 메인2" width="340">
   </div>
 
 
