--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@
         <span>FREE</span>
       </div>
 
-      <div class="price_row">
+      <div class="m_price_row">
         <span class="price_text">29,800원</span>
       </div>
       <span>리뷰 : 37개</span>
@@ -1649,7 +1649,7 @@
       <div class="size_text">
         <span>FREE</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span><del>28,600원</del></span>
         <span class="price_text">24,310원</span>
         <p class="discount_text">15%</p>
@@ -1680,7 +1680,7 @@
       <div class="size_text">
         <span>S,M,L</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span class="price_text">21,900원</span>
       </div>
       <span>리뷰 : 1,450개</span>
@@ -1705,7 +1705,7 @@
       <div class="size_text">
         <span>FREE</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span class="price_text">17,800원</span>
       </div>
       <span>리뷰 : 5개</span>
@@ -1733,7 +1733,7 @@
       <div class="size_text">
         <span>FREE</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span class="price_text">14,800원</span>
       </div>
       <span>리뷰 : 33개</span>
@@ -1755,7 +1755,7 @@
       <div class="size_text">
         <span>S,M,L,XL</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span><del>32,900원</del></span>
         <span class="price_text">28,000원</span>
         <p class="discount_text">15%</p>
@@ -1783,7 +1783,7 @@
       <div class="size_text">
         <span>FREE</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span class="price_text">19,800원</span>
       </div>
       <span>리뷰 : 21개</span>
@@ -1804,7 +1804,7 @@
       <div class="size_text">
         <span>S,M,L</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span class="price_text">35,800원</span>
       </div>
       <span>리뷰 : 18개</span>
@@ -1829,7 +1829,7 @@
       <div class="size_text">
         <span>FREE</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span class="price_text">26,800원</span>
       </div>
       <span>리뷰 : 116개</span>
@@ -1851,7 +1851,7 @@
       <div class="size_text">
         <span>S,M,L,XL</span>
       </div>
-      <div class="price_row">
+      <div class="m_price_row">
         <span><del>29,800원</del></span>
         <span class="price_text">25,400원</span>
         <p class="discount_text">15%</p>
