--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@
   </header>
 
   <div class="m_main_img">
-    <img src="./images/m_main_img.png" alt="mob_main" width="340">
+    <img src="./images/m_main_img.png" alt="mob_main">
   </div>
 
   <h1 class="m_title">WEEKLY BEST</h1>
@@ -1862,7 +1862,7 @@
 
   <!-- 모바일 메인이미지 2 -->
   <div class="m_main_img_2">
-    <img src="./images/m_main_img_2.png" alt="모바일 메인2" width="340">
+    <img src="./images/m_main_img_2.png" alt="모바일 메인2">
   </div>
 
 
@@ -1879,8 +1879,7 @@
 
 
 
-</> <!--.mob_all div 닫기 -->
-
+</div> <!--.mob_all div 닫기 -->
 
 
 </body>
