--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@
 
     <div id="m_logo">
       <a href="#">
-        <img src="./images/main_logo_2.png" alt="mob_logo" width=380>
+        <img src="./images/main_logo_2.png" alt="mob_logo" width="380">
       </a>
     </div>
 
@@ -1606,9 +1606,12 @@
 
   <div class="m_product_box">
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_02.gif" alt="product_img_02" width="160">
-      </a>
+
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_02.gif" alt="product_img_02">
+        </a>
+      </div>
 
       <div class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
@@ -1633,8 +1636,10 @@
     </div>
 
     <div class="m_product_row">
-      <div class="m_row_image">
-        <img src="./images/product_img_01.gif" alt="뉴봄 프릴넥 나그랑 블라우스" width="160">
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_01.gif" alt="뉴봄 프릴넥 나그랑 블라우스">
+        </a>
       </div>
       <ul class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
@@ -1662,9 +1667,11 @@
   <div class="m_product_box">
 
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_03.gif" alt="product_img_03" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_03.gif" alt="product_img_03">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
         <img src="./images/product_color_e89ebf.png" alt="babypink">
@@ -1687,9 +1694,11 @@
     </div>
 
     <div class="m_product_row">
-      <a href="#">
-         <img src="./images/product_img_04.gif" alt="product_img_04" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_04.gif" alt="product_img_04">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_84b4ce.png" alt="skyblue">
         <img src="./images/product_color_309953.png" alt="green">
@@ -1711,12 +1720,15 @@
       <span>리뷰 : 5개</span>
     </div>
   </div>
+
   <div class="m_product_box">
       
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_05.gif" alt="product_img_05" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_05.gif" alt="product_img_05">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
         <img src="./images/product_color_f9f345.png" alt="yellow">
@@ -1740,9 +1752,11 @@
     </div>
 
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_06.gif" alt="product_img_06" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_06.gif" alt="product_img_06" width="160">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_84b4ce.png" alt="skyblue">
         <img src="./images/product_color_2849b5.png" alt="bluejean">
@@ -1766,9 +1780,11 @@
 
   <div class="m_product_box">
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_07.jpg" alt="product_img_07" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_07.jpg" alt="product_img_07" width="160">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_fdfff0.png" alt="ivory">
         <img src="./images/product_color_586129.png" alt="khaki">
@@ -1790,9 +1806,11 @@
     </div>
 
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_08.gif" alt="product_img_08" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_08.gif" alt="product_img_08" width="160">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_84b4ce.png" alt="skyblue">
       </div>
@@ -1813,9 +1831,11 @@
 
   <div class="m_product_box">
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_09.gif" alt="product_img_09" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_09.gif" alt="product_img_09" width="160">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_fca635.png" alt="orange">
         <img src="./images/product_color_84b4ce.png" alt="skyblue">
@@ -1836,9 +1856,11 @@
     </div>
 
     <div class="m_product_row">
-      <a href="#">
-        <img src="./images/product_img_10.gif" alt="product_img_10" width="160">
-      </a>
+      <div class="m_row_img">
+        <a href="#">
+          <img src="./images/product_img_10.gif" alt="product_img_10" width="160">
+        </a>
+      </div>
       <div class="color_row">
         <img src="./images/product_color_2849b5.png" alt="bluejean">
 
