--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:url" content="https://jiyxxn.github.io/justone/">
   <meta property="og:title" content="JUSTONE 저스트원">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./images/main_img">
+  <meta property="og:image" content="./images/main_img.png">
   <meta property="og:description" content="김지윤 포트폴리오">
 
   <title>JUSTONE 저스트원</title>
@@ -1553,11 +1553,11 @@
     </div>
 
     <!-- <iframe src="http://jiyxxn.dothome.co.kr/gnuboard5/bbs/board.php?bo_table=table_01" width="100%" height="700" frameborder="1" scrolling="auto">
-    </iframe> -->
+    </iframe>
 
     <div class="blank_bottom">
       &nbsp;
-    </div>
+    </div> -->
 
     <div class="footer_img">
       <img src="./images/footer_img.png" alt="footer_img">
